package com.paxtech.utime.platform.workers.domain.model.queries;

public record GetAllWorkersQuery() {
}
