package com.paxtech.utime.platform.workers.domain.model.queries;

public record GetWorkerByIdQuery(Long Id) {
}
