package com.paxtech.utime.platform.workers.interfaces.rest.resources;

public record WorkerResource(Long id, String name, String specialization, String photoUrl, Long providerId) {
}
